--- a/Proyecto_Entregable/Capa_Presentacion.csproj
+++ b/Proyecto_Entregable/Capa_Presentacion.csproj
@@ -64,11 +64,11 @@
     <Compile Include="Frm_vendedor.Designer.cs">
       <DependentUpon>Frm_vendedor.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_Inicio.cs">
+    <Compile Include="Frm_Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_Inicio.Designer.cs">
-      <DependentUpon>Frm_Inicio.cs</DependentUpon>
+    <Compile Include="Frm_Login.Designer.cs">
+      <DependentUpon>Frm_Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Frm_Almacenes.cs">
       <SubType>Form</SubType>
@@ -84,8 +84,8 @@
     <EmbeddedResource Include="Frm_Almacenes.resx">
       <DependentUpon>Frm_Almacenes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_Inicio.resx">
-      <DependentUpon>Frm_Inicio.cs</DependentUpon>
+    <EmbeddedResource Include="Frm_Login.resx">
+      <DependentUpon>Frm_Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Principal.resx">
       <DependentUpon>Frm_Principal.cs</DependentUpon>
