--- a/Capa_Negocio/Capa_Negocio.csproj
+++ b/Capa_Negocio/Capa_Negocio.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CN_Encriptacion.cs" />
     <Compile Include="CN_Producto.cs" />
     <Compile Include="CN_Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
