Parte de ventas

--- a/Capa_Negocio/Capa_Negocio.csproj
+++ b/Capa_Negocio/Capa_Negocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CN_Encriptacion.cs" />
     <Compile Include="CN_Producto.cs" />
     <Compile Include="CN_Usuario.cs" />
+    <Compile Include="CN_Vendedor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
