--- a/Proyecto_Entregable/App.config
+++ b/Proyecto_Entregable/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Proyecto_Entregable.Properties.Settings.TECHSOLUBDConnectionString"
+            connectionString="Data Source=DESKTOP-B2KRD4S;Initial Catalog=TECHSOLUBD;Integrated Security=True;Encrypt=False"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
