--- a/Proyecto_Entregable/Capa_Presentacion.csproj
+++ b/Proyecto_Entregable/Capa_Presentacion.csproj
@@ -68,12 +68,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Menus\Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Menus\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="Menus\Frm_Informes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -107,9 +101,16 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
-    <EmbeddedResource Include="Menus\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
+    <Compile Include="TECHSOLUBDDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TECHSOLUBDDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TECHSOLUBDDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TECHSOLUBDDataSet1.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Menus\Frm_Informes.resx">
       <DependentUpon>Frm_Informes.cs</DependentUpon>
     </EmbeddedResource>
@@ -126,6 +127,7 @@
       <DependentUpon>Frm_Vendedor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menus\Reportes\ReporteAlmacen.rdlc" />
+    <EmbeddedResource Include="Menus\Reportes\ReporteVentas.rdlc" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -146,6 +148,28 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="TECHSOLUBDDataSet.xsc">
+      <DependentUpon>TECHSOLUBDDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="TECHSOLUBDDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TECHSOLUBDDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TECHSOLUBDDataSet.xss">
+      <DependentUpon>TECHSOLUBDDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="TECHSOLUBDDataSet1.xsc">
+      <DependentUpon>TECHSOLUBDDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="TECHSOLUBDDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TECHSOLUBDDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TECHSOLUBDDataSet1.xss">
+      <DependentUpon>TECHSOLUBDDataSet1.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
